# BetterCrashlogs

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  about.md  mod.json
.github/workflows/: multi-platform.yml
resources/: imgui.ini
src/: main.cpp
src/analyzer/: 4gb_patch.hpp  analyzer.cpp  analyzer.hpp  disassembler.cpp  disassembler.hpp  ehdata-structs.hpp  exception-codes.cpp  exception-codes.hpp
src/gui/: ui.cpp  ui.hpp  window.cpp  window.hpp
src/utils/: config.cpp  config.hpp  geode-util.cpp  geode-util.hpp  hwinfo.cpp  hwinfo.hpp  memory.hpp  sigscan.hpp  utils.cpp  utils.hpp
